# EchoV2

./: .gitignore  BUILD_INSTRUCTIONS.md  PLUGIN_ARCHITECTURE.md  README.md  STREAMING_IMPLEMENTATION.md  index.html  package-lock.json  package.json  vite.config.test.ts  vite.config.ts
.claude/: settings.local.json
backend/: echov2-backend.spec  main.py  pytest.ini  requirements.txt
backend/api/routes/: chat.py  conversations.py  health.py  plugins.py
backend/config/: settings.py
backend/core/: __init__.py
backend/core/database/: __init__.py  config.py  session.py
backend/core/models/: base.py  database.py  manager.py  registry.py
backend/core/plugins/: anthropic_provider.py  ollama_provider.py  openai_provider.py
backend/services/: chat_service.py  conversation_service.py  health_service.py
backend/tests/: conftest.py  test_api_routes.py  test_chat_service.py
backend/utils/: logging.py  plugin_template.py
config/: development.yaml  production.yaml
scripts/: build-standalone.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ChatWindow.tsx  ConversationListItem.tsx  ConversationSidebar.tsx  ErrorBoundary.tsx  SetupWizard.tsx  StreamingChatExample.tsx
src/hooks/: useChat.ts  useConfig.ts  useConversations.ts
src/hooks/__tests__/: useChat.test.tsx
src/services/api/: client.ts
src/services/chat/: chatService.ts
src/styles/: index.css
src/test/: setup.ts  test-utils.tsx
src/types/: api.ts  errors.ts  message.ts  setup.ts
src/utils/: debounce.ts  sanitization.ts  validation.ts
(+3 files in other folders)
